Kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend
  labels:
    name:  frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
      name : frontend
  template:
    metadata:
      labels:
        app : weather
        name:  frontend
    spec:
      containers:
      - image:  195216432339.dkr.ecr.eu-west-3.amazonaws.com/weatherapp/frontend:latest
        name:  frontend
      imagePullSecrets:
      - name: ecr-secret
        resources:
          requests:
            cpu: "20m"
            memory: "55Mi"
        ports:
        - containerPort:  3000
