Kubernetes/backend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-backend
spec:
  selector:
    app: weather
    name: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
      name: backend
  template:
    metadata:
      labels:
        app: weather
        name: backend
    spec:
      containers:
        - name: backend
          image: danishplayconsole1/weather-app-backend:v1.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-frontend
spec:
  selector:
    app: weather
    name: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
      name: frontend
  template:
    metadata:
      labels:
        app: weather
        name: frontend
    spec:
      containers:
        - name: frontend
          image: danishplayconsole1/weather-app-frontend:v1.1
          ports:
            - containerPort: 3000
