Kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name:  weather-app-frontend
spec:
  selector:
    name:  frontend
  type:  LoadBalancer
  ports:
  - port:  3000
    targetPort:  3000
  
---

apiVersion: v1
kind: Service
metadata:
  name:  weather-app-backend
spec:
  selector:
    name:  backend
  type:  ClusterIP
  ports:
  - port:  5000
    targetPort:  5000
