Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: weather.local
    http:
      paths:
      - path: /frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: weather-app-frontend
            port:
              number: 3000

      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: weather-app-backend
            port:
              number: 5000
